--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,82 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+body {
+	background-color:#1976d2;
+	display:flex;
+	align-items:center;
+	justify-content:center;
+	height: 100vh;
+	padding: 0px;
+	margin: 0px;
+	font-family: 'Roboto', sans-serif;
+	margin: 0;
+}
+html, body { height: 100%; }
+* {
+	outline: none !important;
+}
+.contentSec {
+	background-color: #ffffff;
+	border-radius: 6px;
+	padding: 30px;
+	box-shadow: 0px 0px 5px rgba(0,0,0,0.3);
+	width: auto;
+	min-height: 200px;
+	overflow: auto;
+}
+.intro, .questionScreen {
+	width: 700px;
+}
+.smallLine {
+	width:70px;
+	height: 3px;
+	background-color:#1976d2;
+	margin: 15px 0px;
+}
+.error {
+	color: red;
+	bottom: -20px;
+	font-size: 14px;
+	position: absolute;
+}
+.mat-raised-button.mat-primary {
+	background-color:#1976d2;
+}
+.mat-raised-button.mat-success {
+	background-color:#20b012;
+	color: #ffffff;	
+}
+.quest_no {
+	font-size: 14px;
+}
+.questionSec {
+	max-height: 400px;
+	overflow: auto;
+}
+.qa {
+	min-height: 245px;
+}
+.cup {
+	min-height: 120px;
+	max-height: 120px;
+}
+.form-check input, .form-check label {
+	cursor: pointer;
+}
+.answer span{
+	color: #1976d2;
+	font-weight: bold;
+	font-size: 18px;
+}
+.hide {
+	display:none !important;
+}
+.show {
+	display:inline-block !important;
+}
+
+@media(max-width:720px) {
+	.intro, .questionScreen {
+		width: 96%;
+	}
+}
